fix notification issues in windows form projects

--- a/HaleyMVVM/Dictionaries/haleyConverters.xaml
+++ b/HaleyMVVM/Dictionaries/haleyConverters.xaml
@@ -5,7 +5,7 @@
     <cnv:BoolToVisibilityConverter x:Key="BooltoVisibiliy"/>
     <cnv:EnumToDescriptionConverter x:Key="EnumtoDescription"/>
     <cnv:EnumToControlConverter x:Key="EnumToControl"/>
-    <cnv:EnumListToDescriptionListConverter x:Key="EnumtoStringList"/>
+    <cnv:EnumListToDescriptionListConverter x:Key="EnumListtoStringList"/>
     <cnv:EqualityCheckConverter x:Key="EqualityCheck"/>
     <cnv:EqualityCheckToVisibilityConverter x:Key="EqualityToVisibility"/>
     <cnv:InverseBooleanConverter x:Key="InverseBoolean"/>
