--- a/HaleyMVVM/Themes/ViewThemes/NotificationRD.xaml
+++ b/HaleyMVVM/Themes/ViewThemes/NotificationRD.xaml
@@ -23,9 +23,11 @@
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="{x:Type Button}">
-                    <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                </ControlTemplate>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                    <Border Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}">
+                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    </Border>
+                    </ControlTemplate>
             </Setter.Value>
         </Setter>      
     </Style>
@@ -41,12 +43,7 @@
                             <Border.Effect>
                                 <DropShadowEffect Color="Gray" ShadowDepth="0" BlurRadius="1" />
                             </Border.Effect>
-                        </Border>
-                        <Border Background="{TemplateBinding Background}" CornerRadius="4">
-                            <Border.OpacityMask>
-                                <VisualBrush Visual="{Binding ElementName=brderButton}"/>
-                            </Border.OpacityMask>
-                                <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
                         </Border>
                     </Grid>
                     <ControlTemplate.Triggers>
@@ -78,7 +75,12 @@
                     </beh:Interaction.Triggers>
                     <TextBlock  Text="{Binding Title,RelativeSource={RelativeSource AncestorType={x:Type bc:Notification}}}" Foreground="{Binding AccentForeground,RelativeSource={RelativeSource AncestorType={x:Type bc:Notification}}}" HorizontalAlignment="Left" VerticalAlignment="Center"  FontSize="12" FontFamily="Century Gothic" Margin="10,0"/>
                 </Grid>
-                <Button Grid.Column="1" Style="{StaticResource internal_notify_flexi_button_base}" Content="X" FontSize="15" FontStretch="ExtraExpanded" FontWeight="Bold" Foreground="{Binding AccentForeground,RelativeSource={RelativeSource AncestorType={x:Type bc:Notification}}}" Width="{Binding ElementName=grdHeader, Path=ActualHeight}" CommandParameter="{StaticResource False}" Command="{x:Static ApplicationCommands.Close}" />
+                <!--<Button Grid.Column="1" Style="{StaticResource internal_notify_flexi_button_base}" Content="X" FontSize="15" FontStretch="ExtraExpanded" FontWeight="Bold" Foreground="{Binding AccentForeground,RelativeSource={RelativeSource AncestorType={x:Type bc:Notification}}}" Width="{Binding ElementName=grdHeader, Path=ActualHeight}" CommandParameter="{StaticResource False}" Command="{x:Static ApplicationCommands.Close}" />-->
+                <Button Grid.Column="1" Style="{StaticResource internal_notify_flexi_button_base}"  Width="{Binding ElementName=grdHeader, Path=ActualHeight}" CommandParameter="{StaticResource False}" Command="{x:Static ApplicationCommands.Close}" IsHitTestVisible="True">
+                    <Viewbox Margin="4" IsHitTestVisible="False">
+                        <Ellipse Height="10" Width="10" Fill="#FFAE3636" Stroke="White" StrokeThickness="0.5"/>
+                    </Viewbox>
+                </Button>
             </Grid>
         </Border>
     </DataTemplate>
@@ -128,7 +130,7 @@
     <DataTemplate x:Key="internal_notification_controlbox">
         <StackPanel Orientation="Horizontal" Grid.Row="1" HorizontalAlignment="Right" Margin="0,2">
             <Button Style="{StaticResource internal_notify_flexi_button}"  Margin="4,1" Content="Cancel" CommandParameter="{StaticResource False}" Command="{x:Static ApplicationCommands.Close}"/>
-            <Button Style="{StaticResource internal_notify_flexi_button}"  Margin="4,1" Background="{Binding AccentColor,RelativeSource={RelativeSource AncestorType={x:Type bc:Notification}}}" Foreground="{Binding AccentForeground,RelativeSource={RelativeSource AncestorType={x:Type bc:Notification}}}" Content="ACCEPT" CommandParameter="{StaticResource True}" Command="{x:Static ApplicationCommands.Close}" />
+            <Button Style="{StaticResource internal_notify_flexi_button}"  Margin="4,1" Background="{Binding ButtonBackground,RelativeSource={RelativeSource AncestorType={x:Type bc:Notification}}}" Foreground="{Binding AccentForeground,RelativeSource={RelativeSource AncestorType={x:Type bc:Notification}}}" Content="ACCEPT" CommandParameter="{StaticResource True}" Command="{x:Static ApplicationCommands.Close}" />
         </StackPanel>
     </DataTemplate>
 
@@ -174,67 +176,67 @@
     </DataTemplate>
 
     <ControlTemplate x:Key="internal_notification_dialog" TargetType="{x:Type bc:Notification}">
-        <Border x:Name="brdrMain" CornerRadius="10"  Height="Auto" Margin="10" BorderBrush="{TemplateBinding BorderBrush}" Background="{TemplateBinding AccentColor}">
-            <Border.Effect>
-                <DropShadowEffect ShadowDepth="0" BlurRadius="{Binding GlowRadius,RelativeSource={RelativeSource AncestorType={x:Type bc:Notification}}}" Color="{Binding GlowColor,RelativeSource={RelativeSource AncestorType={x:Type bc:Notification}}}"/>
-            </Border.Effect>
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="27"/>
-                    <RowDefinition Height="Auto" MinHeight="100"/>
-                </Grid.RowDefinitions>
+        <Grid Background="{x:Null}" Margin="10">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="27"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <!--HEADER-->
+            <Border x:Name="brdrHeader" Grid.Row="0" CornerRadius="10,10,0,0"  Height="Auto"  Background="{TemplateBinding AccentColor}" BorderThickness="0" Panel.ZIndex="99" Margin="-1">
+                <ContentControl ContentTemplate="{StaticResource internal_notify_header_template}" />
+            </Border>
+            <Border x:Name="brdrMain" Grid.Row="1" CornerRadius="0,0,10,10"  Height="Auto" BorderBrush="{TemplateBinding BorderBrush}" Background="{TemplateBinding Background}" BorderThickness="{TemplateBinding BorderThickness}" MinHeight="100" Panel.ZIndex="0" >
+                <Border.Effect>
+                    <DropShadowEffect ShadowDepth="0" BlurRadius="{Binding GlowRadius,RelativeSource={RelativeSource AncestorType={x:Type bc:Notification}}}" Color="{Binding GlowColor,RelativeSource={RelativeSource AncestorType={x:Type bc:Notification}}}"/>
+                </Border.Effect>
+                    <!--ACTUAL CONTENT-->
+                      <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto" MinHeight="100"/>
+                                <RowDefinition Height="8"/>
+                            </Grid.RowDefinitions>
+                            <ContentControl Margin="5">
+                                <ContentControl.Style>
+                                    <Style TargetType="ContentControl">
+                                        <Style.Triggers>
+                                            <DataTrigger Binding="{Binding Type,RelativeSource={RelativeSource AncestorType={x:Type bc:Notification}}}" Value="{x:Static enums:DisplayType.ContainerView}">
+                                                <Setter Property="ContentTemplate" Value="{StaticResource internal_notification_containerView}"/>
+                                            </DataTrigger>
+                                            <DataTrigger Binding="{Binding Type,RelativeSource={RelativeSource AncestorType={x:Type bc:Notification}}}" Value="{x:Static enums:DisplayType.ShowInfo}">
+                                                <Setter Property="ContentTemplate" Value="{StaticResource internal_notification_showInfo}"/>
+                                            </DataTrigger>
 
-                <!--HEADER-->
-                <ContentControl Grid.Row="0" ContentTemplate="{StaticResource internal_notify_header_template}"/>
+                                            <DataTrigger Binding="{Binding Type,RelativeSource={RelativeSource AncestorType={x:Type bc:Notification}}}" Value="{x:Static enums:DisplayType.GetConfirmation}">
+                                                <Setter Property="ContentTemplate" Value="{StaticResource internal_notification_confirm}"/>
+                                            </DataTrigger>
 
-                <!--ACTUAL CONTENT-->
-                <Border Grid.Row="1" CornerRadius="0,0,9,9" Background="{TemplateBinding Background}">
-                    <Grid>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto" MinHeight="100"/>
-                            <RowDefinition Height="8"/>
-                        </Grid.RowDefinitions>
-                        <ContentControl Margin="5">
-                            <ContentControl.Style>
-                                <Style TargetType="ContentControl">
-                                    <Style.Triggers>
-                                        <DataTrigger Binding="{Binding Type,RelativeSource={RelativeSource AncestorType={x:Type bc:Notification}}}" Value="{x:Static enums:DisplayType.ContainerView}">
-                                            <Setter Property="ContentTemplate" Value="{StaticResource internal_notification_containerView}"/>
-                                        </DataTrigger>
-                                        <DataTrigger Binding="{Binding Type,RelativeSource={RelativeSource AncestorType={x:Type bc:Notification}}}" Value="{x:Static enums:DisplayType.ShowInfo}">
-                                            <Setter Property="ContentTemplate" Value="{StaticResource internal_notification_showInfo}"/>
-                                        </DataTrigger>
+                                            <DataTrigger Binding="{Binding Type,RelativeSource={RelativeSource AncestorType={x:Type bc:Notification}}}" Value="{x:Static enums:DisplayType.GetInput}">
+                                                <Setter Property="ContentTemplate" Value="{StaticResource internal_notification_getInfo}"/>
+                                            </DataTrigger>
 
-                                        <DataTrigger Binding="{Binding Type,RelativeSource={RelativeSource AncestorType={x:Type bc:Notification}}}" Value="{x:Static enums:DisplayType.GetConfirmation}">
-                                            <Setter Property="ContentTemplate" Value="{StaticResource internal_notification_confirm}"/>
-                                        </DataTrigger>
-
-                                        <DataTrigger Binding="{Binding Type,RelativeSource={RelativeSource AncestorType={x:Type bc:Notification}}}" Value="{x:Static enums:DisplayType.GetInput}">
-                                            <Setter Property="ContentTemplate" Value="{StaticResource internal_notification_getInfo}"/>
-                                        </DataTrigger>
-                                    </Style.Triggers>
-                                </Style>
-                            </ContentControl.Style>
-                        </ContentControl>
-                    </Grid>
-                </Border>
-            </Grid>
-        </Border>
+                                    <DataTrigger Binding="{Binding Type,RelativeSource={RelativeSource AncestorType={x:Type bc:Notification}}}" Value="{x:Static enums:DisplayType.CustomView}">
+                                        <Setter Property="ContentTemplate" Value="{Binding CustomViewTemplate,RelativeSource={RelativeSource AncestorType={x:Type bc:Notification}}}"/>
+                                    </DataTrigger>
+                                </Style.Triggers>
+                                    </Style>
+                                </ContentControl.Style>
+                            </ContentControl>
+                        </Grid>
+            </Border>
+        </Grid>
+            
+            
+        
     </ControlTemplate>
 
     <ControlTemplate x:Key="internal_notification_toast" TargetType="{x:Type bc:Notification}">
-        <Border x:Name="brdrMain" Height="Auto" Margin="5" BorderBrush="{TemplateBinding BorderBrush}" Background="{TemplateBinding ToastBackground}" MaxWidth="400" MaxHeight="300">
-            <Border.Effect>
-                <DropShadowEffect Color="White" ShadowDepth="0" BlurRadius="5" />
-            </Border.Effect>
+        <Border Margin="3" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" MaxWidth="400" MaxHeight="300">
             <Grid>
                 <Grid.RowDefinitions>
-                    <RowDefinition x:Name="rowdefmain" Height="25"/>
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" MinHeight="100"/>
-                    <RowDefinition Height="25"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition />
                 </Grid.RowDefinitions>
-
+                <!--HEADER-->
                 <Grid Background="{TemplateBinding AccentColor}">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
@@ -245,18 +247,30 @@
                         <TextBlock Text="{TemplateBinding AppName}" Foreground="{TemplateBinding AccentForeground}" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="13" FontFamily="Century Gothic" Margin="15,0"/>
                     </Grid>
                     <!--CLOSE BUTTON-->
-                    <Button Grid.Column="1" Style="{StaticResource internal_notify_flexi_button}" Background="Transparent" Content="X" FontSize="15" FontStretch="ExtraExpanded" FontWeight="Bold" Foreground="{TemplateBinding AccentForeground}"  CommandParameter="{StaticResource False}" Command="{x:Static ApplicationCommands.Close}"  BorderThickness="0" BorderBrush="Transparent" Width="25"/>
+                    <Button Grid.Column="1" Style="{StaticResource internal_notify_flexi_button_base}"  Width="25" Height="25" CommandParameter="{StaticResource False}" Command="{x:Static ApplicationCommands.Close}" IsHitTestVisible="True">
+                        <Viewbox Margin="4" IsHitTestVisible="False">
+                            <Ellipse Height="10" Width="10" Fill="#FFAE3636" Stroke="White" StrokeThickness="0.5"/>
+                        </Viewbox>
+                    </Button>
                 </Grid>
-                
-                <!--Message Title-->
-                <TextBlock Grid.Row="1"  Text="{TemplateBinding Title}" Foreground="{TemplateBinding ToastForeground}" HorizontalAlignment="Left" VerticalAlignment="Center"  FontSize="12" FontFamily="Century Gothic" Margin="5"/>
-                
-                <!--ACTUAL CONTENT-->
-                <ContentControl Margin="5" Grid.Row="2" VerticalAlignment="Top" ContentTemplate="{StaticResource internal_notification_showInfo}"/>
-                
-                
-                <!--AutoClose-->
-                <WrapPanel Grid.Row="3" VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="3" Visibility="{TemplateBinding AutoClose,Converter={StaticResource BooltoVisibiliy}}">
+                <!--Toast Background-->
+                <Border x:Name="brdrMain" Grid.Row="1" Background="{TemplateBinding ToastBackground}" BorderBrush="Transparent" BorderThickness="0">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" MinHeight="100"/>
+                            <RowDefinition Height="25"/>
+                        </Grid.RowDefinitions>
+
+                        <!--Message Title-->
+                        <TextBlock Text="{TemplateBinding Title}" Foreground="{TemplateBinding ToastForeground}" HorizontalAlignment="Left" VerticalAlignment="Center"  FontSize="12" FontFamily="Century Gothic" Margin="5"/>
+
+                        <!--ACTUAL CONTENT-->
+                        <ContentControl Margin="5" Grid.Row="1" VerticalAlignment="Top" ContentTemplate="{StaticResource internal_notification_showInfo}"/>
+
+
+                        <!--AutoClose-->
+                        <!--<WrapPanel Grid.Row="3" VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="3" Visibility="{TemplateBinding AutoClose,Converter={StaticResource BooltoVisibiliy}}">
                     <WrapPanel.Resources>
                         <Style TargetType="{x:Type TextBlock}">
                             <Setter  Property="FontSize" Value="10"/>
@@ -266,16 +280,20 @@
                     <TextBlock Text="Auto close in "/>
                     <TextBlock Text="{Binding Path=CountDown, RelativeSource={RelativeSource TemplatedParent},NotifyOnSourceUpdated=True,UpdateSourceTrigger=PropertyChanged}" FontWeight="Bold" />
                     <TextBlock Text=" sec."/>
-                </WrapPanel>
-               
-                <!--Close All toasts-->
-                <TextBlock Grid.Row="3" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="3">           
+                </WrapPanel>-->
+                        <TextBlock Text="{Binding Path=CountDown, RelativeSource={RelativeSource TemplatedParent},NotifyOnSourceUpdated=True,UpdateSourceTrigger=PropertyChanged}" FontWeight="Bold" Grid.Row="2" VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="3" Visibility="{TemplateBinding AutoClose,Converter={StaticResource BooltoVisibiliy}}" FontSize="10" Foreground="{Binding Path=ToastForeground, RelativeSource={RelativeSource TemplatedParent}}"/>
+
+                        <!--Close All toasts-->
+                        <TextBlock Grid.Row="2" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="3">           
                     <Hyperlink CommandParameter="{StaticResource False}" Command="{x:Static SystemCommands.CloseWindowCommand}" Foreground="{TemplateBinding ToastForeground}" TextDecorations="Underline" FontSize="9">
                         Close All
                     </Hyperlink>
-                </TextBlock>
+                        </TextBlock>
+                    </Grid>
+                </Border>
             </Grid>
         </Border>
+             
     </ControlTemplate>
 
     <Style TargetType="{x:Type bc:Notification}">
