--- a/_TESTING/NotificationDemo/MainWindow.xaml
+++ b/_TESTING/NotificationDemo/MainWindow.xaml
@@ -21,6 +21,14 @@
         <Style TargetType="{x:Type RadioButton}">
             <Setter Property="Margin" Value="5"/>
         </Style>
+        <DataTemplate x:Key="globWindow">
+            <local:InputTest01/>
+        </DataTemplate>
+        <DataTemplate x:Key="testtemp1">
+            <Grid>
+                <TextBlock Text="Hello, World !"/>
+            </Grid>
+        </DataTemplate>
     </Window.Resources>
 
     <Grid>
@@ -35,7 +43,7 @@
                 <ColumnDefinition Width="150"/>
             </Grid.ColumnDefinitions>
             
-            <StackPanel Background="#FFD8E9F1" >
+            <StackPanel Background="White" >
                 <TextBlock Text="Title"/>
                 <TextBlock Text="Message"/>
                 <TextBlock Text="Dialog Result"/>
@@ -112,9 +120,12 @@
                 </StackPanel>
                 <CheckBox VerticalAlignment="Center" Content="Blur" x:Name="cbxBlur" Margin="15"/>
             </StackPanel>
-            
-            <Button x:Name="btnSend" Content="Notify" Height="30" Width="120" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="10" Click="btnSend_Click"/>
-            
+
+            <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
+                <Ellipse hm:DialogSetterAP.BlurWindows="{Binding ElementName=cbxBlur,Path=IsChecked}"  hm:DialogSetterAP.Title="Globalization" hm:DialogSetterAP.Content="{StaticResource globWindow}" Height="20" Width="20" Fill="Purple" Margin="3"/>
+                <Ellipse hm:DialogSetterAP.BlurWindows="{Binding ElementName=cbxBlur,Path=IsChecked}" hm:DialogSetterAP.Content="{StaticResource testtemp1}" Height="20" Width="20" Fill="#FF3936A9" Margin="3"/>
+                <Button x:Name="btnSend" Content="Notify" Height="30" Width="120"  VerticalAlignment="Bottom" Margin="10" Click="btnSend_Click"/>
+            </StackPanel>
         </Grid>
         
     </Grid>
