Removed EnumToControl as it is replaced with KeyToControl

--- a/_TESTING/NotificationDemo/MainWindow.xaml
+++ b/_TESTING/NotificationDemo/MainWindow.xaml
@@ -43,7 +43,7 @@
                 <ColumnDefinition Width="150"/>
             </Grid.ColumnDefinitions>
             
-            <StackPanel Background="White" >
+            <StackPanel >
                 <TextBlock Text="Title"/>
                 <TextBlock Text="Message"/>
                 <TextBlock Text="Dialog Result"/>
