--- a/HaleyMVVM/Dictionaries/haleyConverters.xaml
+++ b/HaleyMVVM/Dictionaries/haleyConverters.xaml
@@ -14,6 +14,7 @@
     <cnv:VerificationConverter x:Key="Verification"/>
     <cnv:EnumTypeToDescriptionListConverter x:Key="EnumTypeToDescriptionList"/>
     <cnv:MultiBindingEqualityCheckConverter x:Key="MultiBindingEqualityCheck"/>
+    <cnv:EnumTypeToValuesConverter x:Key="EnumTypeToValues"/>
     <cnv:HalfValueConverter x:Key="HalfValue"/>
     <cnv:ScrollLimitConverter x:Key="ScrollLimit"/>
     <cnv:ColorToBrushConverter x:Key="ColorToBrush"/>
