fix hotkey events

--- a/HaleyMVVM/Dictionaries/haleyConverters.xaml
+++ b/HaleyMVVM/Dictionaries/haleyConverters.xaml
@@ -2,21 +2,22 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:cnv="clr-namespace:Haley.MVVM.Converters"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    <cnv:BoolToVisibilityConverter x:Key="BooltoVisibility"/>
     <cnv:BoolToVisibilityConverter x:Key="BooltoVisibiliy"/>
+    <cnv:ColorToBrushConverter x:Key="ColorToBrush"/>
+    <cnv:EnumListToDescriptionListConverter x:Key="EnumListoStringList"/>
     <cnv:EnumToDescriptionConverter x:Key="EnumtoDescription"/>
-    <cnv:EnumListToDescriptionListConverter x:Key="EnumListtoStringList"/>
+    <cnv:EnumTypeToDescriptionListConverter x:Key="EnumTypeToDescriptionList"/>
+    <cnv:EnumTypeToValuesConverter x:Key="EnumTypeToValues"/>
     <cnv:EqualityCheckConverter x:Key="EqualityCheck"/>
     <cnv:EqualityCheckToVisibilityConverter x:Key="EqualityToVisibility"/>
+    <cnv:HalfValueConverter x:Key="HalfValue"/>
     <cnv:InverseBooleanConverter x:Key="InverseBoolean"/>
     <cnv:KeyToControlConverter x:Key="KeytoControl"/>
-    <cnv:MultiValueBinderConverter x:Key="MultiBinder"/>
-    <cnv:ReducerConverter x:Key="LengthReducer"/>
-    <cnv:VerificationConverter x:Key="Verification"/>
-    <cnv:EnumTypeToDescriptionListConverter x:Key="EnumTypeToDescriptionList"/>
     <cnv:MultiBindingEqualityCheckConverter x:Key="MultiBindingEqualityCheck"/>
-    <cnv:EnumTypeToValuesConverter x:Key="EnumTypeToValues"/>
-    <cnv:HalfValueConverter x:Key="HalfValue"/>
-    <cnv:ScrollLimitConverter x:Key="ScrollLimit"/>
-    <cnv:ColorToBrushConverter x:Key="ColorToBrush"/>
+    <cnv:MultiValueBinderConverter x:Key="MultiBinder"/>
     <cnv:NegateValueConverter x:Key="NegateValue"/>
+    <cnv:ReducerConverter x:Key="LengthReducer"/>
+    <cnv:ScrollLimitConverter x:Key="ScrollLimit"/>
+    <cnv:VerificationConverter x:Key="Verification"/>
 </ResourceDictionary>
